2011-06-08  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimAccountPassthroughProvider.c, cimAccountPassthrough.mof, 
	cimXmlRequest.c, cimXmlRequest.h, httpAdapter.c, Makefile.am,
	configure.ac, default.reg.in:
	[ 3313833 ] Allow for passthrough for expired user to update password
	
2011-05-02 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* configure.ac
	[ 3190623 ] Set *IsSettable propperties to false for IndicationService
	Problem with auto-enable when tests are enabled.

2011-05-16 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c
	[ 3296541 ] CIM_IndicationSubscription corrupts after delilvery fails 

2011-05-10 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopServerProvider.c
	[ 3287789 ] interopServerProvider not conservative when answering reqs

2011-04-29 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* 20_indication.mof.pre.in, Makefile.am, configure.ac
	control.c, interopServerProvider.c, sfcb.cfg.pre.in:
	[ 3190623 ] Set *IsSettable propperties to false for IndicationService

2011-04-28  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 3202466 ] Single item on method param of array type rejected via Local
	(patch by Chris Poblete)

	* queryOperation.c: 
	[ 3291646 ] Unused var in __NullEvaluate

2011-04-05 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 3213591 ] Local intf client abort abnormally on enum filter syntax err
	(patch by cpoblete)

2011-04-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* queryOperation.c, providerDrv.c
	[ 3261868 ] Enum CQL filter on NULL cause incorrect rsp
	(based on patch by  cpoblete)

2011-03-31  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* elementCapabiltiesProvider.c:
	[ 3265502 ] CMPIContext not released in elementCapabilitiesProvider

2011-03-30 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* queryOperation.c
	[ 3206663 ] Enum CQL filter on NULL cause segfault and incorrect rsp