@@ -13,6 +13,7 @@ Bugs fixed:
 - 3202466 Single item on method param of array type rejected via Local
 - 3287789 interopServerProvider not conservative when answering reqs
 - 3296541 CIM_IndicationSubscription corrupts after delilvery fails
+- 3314383 Memory leak in CimResource_Enumerate_EP
 
 Changes in 1.3.11
 =================
